kubernetes/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: lasryanass/exam:frontendv2
          startupProbe:
            httpGet:
              port: http-port
              path: /index.html
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: http-port
              path: /index.html
            failureThreshold: 1
            periodSeconds: 10
          readinessProbe:
            httpGet:
              port: http-port
              path: /index.html
            failureThreshold: 1
            periodSeconds: 10
          ports:
            - containerPort: 80
              name: http-port
  selector:
    matchLabels:
      app: frontend
