kubernetes/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: exam
  labels:
    name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    role: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: exam
spec:
  serviceName: mongodb-service
  replicas: 2
  selector:
    matchLabels:
      role: mongo
  template:
    metadata:
      labels:
        role: mongo
    spec:
      containers:
        - name: mongodb-container
          image: mongo
          livenessProbe:
            exec:
              command:
                - echo
                - -e
                - '--eval "db.adminCommand(`ping`)"'
                - \
                - xargs
                - mongo
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            exec:
              command:
                - echo
                - -e
                - '--eval "db.adminCommand(`ping`)"'
                - \
                - xargs
                - mongo
            initialDelaySeconds: 5
            periodSeconds: 10            
          resources:
            requests:
              cpu: 0.2
              memory: 200Mi
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-pvc
              mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongodb-pvc
      annotations:
        volume.beta.kubernetes.io/storage-class: "standard"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
